light weight strength training

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -7,6 +7,10 @@
 				<ul class="nav flex-column">
 
 					<li class="nav-item">
+						<a class="nav-link" href="{{ '/read/subject/light_weight_strength_training/' | prepend: site.baseurl | escape }}" title="輕肌力運動">輕肌力運動</a>
+					</li>
+
+					<li class="nav-item">
 						<a class="nav-link" href="/read/blog">
 							<span data-feather="file"></span>
 							Blog
@@ -19,6 +23,10 @@
 
 					<li class="nav-item">
 						<a class="nav-link" href="{{ '/sitemap.xml' | prepend: site.baseurl | escape }}" title="Sitemap">Sitemap</a>
+					</li>
+
+					<li class="nav-item">
+						<a class="nav-link" href="https://github.com/tendonomore/tendonomore.github.io" target="_blank" title="tendonomore">GitHub</a>
 					</li>
 
 				</ul>
