--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -7,12 +7,17 @@
 				<ul class="nav flex-column">
 
 					<li class="nav-item">
-						<a class="nav-link" href="{{ '/read/subject/osho/body_mind/' | prepend: site.baseurl | escape }}" title="輕肌力運動">身心平衡</a>
+						<a class="nav-link" href="{{ '/read/subject/osho/body_mind/' | prepend: site.baseurl | escape }}" title="身心平衡">身心平衡</a>
 					</li>
 
 					<li class="nav-item">
 						<a class="nav-link" href="{{ '/read/subject/light_weight_strength_training/' | prepend: site.baseurl | escape }}" title="輕肌力運動">輕肌力運動</a>
 					</li>
+
+					<li class="nav-item">
+						<a class="nav-link" href="{{ '/read/subject/qingjing_jing/' | prepend: site.baseurl | escape }}" title="常清靜經">常清靜經</a>
+					</li>
+
 
 					<li class="nav-item">
 						<a class="nav-link" href="/read/blog">
