--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -7,6 +7,10 @@
 				<ul class="nav flex-column">
 
 					<li class="nav-item">
+						<a class="nav-link" href="{{ '/read/subject/four_agreements/' | prepend: site.baseurl | escape }}" title="讓心自由">讓心自由</a>
+					</li>
+
+					<li class="nav-item">
 						<a class="nav-link" href="{{ '/read/subject/osho/body_mind/' | prepend: site.baseurl | escape }}" title="身心平衡">身心平衡</a>
 					</li>
 
