--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -22,7 +22,11 @@
 						<a class="nav-link" href="{{ '/read/subject/qingjing_jing/' | prepend: site.baseurl | escape }}" title="常清靜經">常清靜經</a>
 					</li>
 
+					<li class="nav-item">
+						<a class="nav-link" href="{{ '/read/subject/sadhguru/isha_kriya/' | prepend: site.baseurl | escape }}" title="Isha Kriya">Isha Kriya</a>
+					</li>
 
+					
 					<li class="nav-item">
 						<a class="nav-link" href="/read/blog">
 							<span data-feather="file"></span>
