--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -26,6 +26,10 @@
 						<a class="nav-link" href="{{ '/read/subject/sadhguru/isha_kriya/' | prepend: site.baseurl | escape }}" title="Isha Kriya">Isha Kriya</a>
 					</li>
 
+					<li class="nav-item">
+						<a class="nav-link" href="{{ '/read/subject/htz/innerzen/' | prepend: site.baseurl | escape }}" title="黃庭禪">黃庭禪</a>
+					</li>
+
 					
 					<li class="nav-item">
 						<a class="nav-link" href="/read/blog">
