--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -30,6 +30,10 @@
 						<a class="nav-link" href="{{ '/read/subject/htz/innerzen/' | prepend: site.baseurl | escape }}" title="黃庭禪">黃庭禪</a>
 					</li>
 
+					<li class="nav-item">
+						<a class="nav-link" href="{{ '/read/subject/deep_talking/' | prepend: site.baseurl | escape }}" title="深層溝通">深層溝通</a>
+					</li>
+
 					
 					<li class="nav-item">
 						<a class="nav-link" href="/read/blog">
