--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,7 @@
 
 <title>{% if page.title %}{{ page.title | escape }} - {{ site.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
 <meta name="description" content="{% if page.description %}{{ page.description | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description | strip_html | strip_newlines | truncate: 160 | escape }}{% endif %}" />
+<meta name="google-site-verification" content="M-0W835Iwe7U0_BWnMyZ5CaKOSTm7rkyY_5lmhXqgNo" />
 
 <link rel="icon" type="image/x-icon" href="{{ '/asset/img/favicon.png' | prepend: site.baseurl | escape }}" />
 <link rel="image_src" href="{{ page.image_src | default: '/asset/img/logo.png' | prepend: site.baseurl | prepend: site.url | escape }}" />
