--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -34,6 +34,9 @@
 						<a class="nav-link" href="{{ '/read/subject/deep_talking/' | prepend: site.baseurl | escape }}" title="深層溝通">深層溝通</a>
 					</li>
 
+					<li class="nav-item">
+						<a class="nav-link" href="{{ '/read/subject/breathing/' | prepend: site.baseurl | escape }}" title="呼吸練習">呼吸練習</a>
+					</li>
 
 					<li class="nav-item">
 						<a class="nav-link" href="/read/blog">
