--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -39,6 +39,10 @@
 					</li>
 
 					<li class="nav-item">
+						<a class="nav-link" href="{{ '/read/subject/sunbathing/' | prepend: site.baseurl | escape }}" title="曬太陽">曬太陽</a>
+					</li>
+
+					<li class="nav-item">
 						<a class="nav-link" href="/read/blog">
 							<span data-feather="file"></span>
 							Blog
