--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -43,6 +43,10 @@
 					</li>
 
 					<li class="nav-item">
+						<a class="nav-link" href="{{ '/read/subject/isogai/' | prepend: site.baseurl | escape }}" title="isogai">isogai</a>
+					</li>
+
+					<li class="nav-item">
 						<a class="nav-link" href="/read/blog">
 							<span data-feather="file"></span>
 							Blog
