--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -47,6 +47,10 @@
 					</li>
 
 					<li class="nav-item">
+						<a class="nav-link" href="{{ '/read/subject/yoga/balasana/' | prepend: site.baseurl | escape }}" title="嬰兒式">嬰兒式</a>
+					</li>
+
+					<li class="nav-item">
 						<a class="nav-link" href="/read/blog">
 							<span data-feather="file"></span>
 							Blog
