--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,7 +2,7 @@
 		<!--
 			* https://getbootstrap.com/docs/5.0/examples/dashboard/
 		//-->
-		<nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block sidebar sidebar-sticky collapse bg-sidebar">
+		<nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block sidebar collapse bg-sidebar">
 			<div class="position-sticky pt-3">
 				<ul class="nav flex-column">
 
